--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
     <nav> 
         <div class="navbar navbar-expand-sm sticky-top">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <a href="#" class="navbar-brand text-white">Joan Pena</a>
+                    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#about">About</a>
+                            <li class="navbar-item">
+                                <a class="nav-link active text-white" href="#about">About</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="nav-link" href="projects.html">Projects</a>
+                                <a class="nav-link text-white" href="projects.html">Projects</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="nav-link" href="#contact">Contact</a>
+                                <a class="nav-link text-white" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -85,6 +86,10 @@
                         
             </div>
         </div>
+    </section>
+
+    <section id="Projects">
+        <h2>Projects</h2>
     </section>
 
     <section id="social">
