Added color to tech stack logos

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="navbar-item">
-                                <a class="nav-link active text-white" href="#about">About</a>
+                                <a class="nav-link active text-white" href="#about"><i class="fa-solid fa-book"></i></i>About</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="nav-link text-white" href="projects.html">Projects</a>
+                                <a class="nav-link text-white" href="projects.html"><i class="fa-solid fa-briefcase"></i>Projects</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="nav-link text-white" href="#contact">Contact</a>
+                                <a class="nav-link text-white" href="#contact"><i class="fa-solid fa-address-book"></i>Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -74,12 +74,14 @@
                     <div class="col-sm-12 text-center">
                         <h2>Tech Stack</h2>
                     </div>
-                    <div class="row text-center mb-5 mt-2">
-                        <div class="col-sm "><i class="fa-brands fa-html5 fa-xl"></i>HTML</div>
-                        <div class="col-sm"><i class="fa-brands fa-css3 fa-xl"></i>CSS</div>
-                        <div class="col-sm"><i class="fa-brands fa-square-js fa-xl"></i>Javascript</div>
-                        <div class="col-sm"><i class="fa-brands fa-bootstrap fa-xl"></i>Bootstrap</div>
-                        <div class="col-sm"><i class="fa-brands fa-github fa-xl"></i>Github</div>
+                    <div class="row text-center mb-4 mt-2">
+                        <div class="col-sm"><i class="stack fa-brands fa-html5 fa-xl" style="color: orange;"></i><li>HTML</li></div>
+                        <div class="col-sm"><i class="stack fa-brands fa-css3 fa-xl text-info"></i><li>CSS</li></div>
+                        <div class="col-sm"><i class="stack fa-brands fa-square-js fa-xl text-warning"></i><li>Javascript</li></div>
+                        <div class="col-sm"><i class="stack fa-brands fa-bootstrap fa-xl" style="color: #54187c;"></i><li>Bootstrap</li></div>
+                        <div class="col-sm"><i class="stack fa-brands fa-github fa-xl"></i><li>Github</li></div>
+                        <div class="col-sm"><i class="stack fa-brands fa-python" style="color: #084ec0;"></i><li>Python</li></div>
+
                     </div>
 
 
