--- a/index.html
+++ b/index.html
@@ -197,13 +197,19 @@
 
 
 
-<footer>
-    <section>
-        Professional Networks
-    </section>
-    <h6>Created by Joan Pena</h6>
 
-</footer>
+
+
+<footer class="py-3 my-4">
+    <h2 class="text-center">Professional Networks</h2>
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3 gap-2">
+            <li><a class="text-dark" href="https://linkedin.com/in/joan-pena-231427221"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
+            <li><a class="text-dark" href="https://github.com/Joanrpena"><i class="fa-brands fa-github"></i>Github</a></li>
+    </ul>
+    <p class="text-center text-muted">Created by Joan Pena</p>
+  </footer>
+
+
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
